--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="normalize.css"/>
     <link rel="stylesheet" href="src/pages/home/styles.css"/>
     <link rel="stylesheet" href="src/shared/styles.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
 
   <body class="background">
@@ -15,9 +16,9 @@
         <form id="formgames" action="#">
           <div>
             <input type="text" placeholder="Find your games" id="searchInput" />
-          </div>
-          <div class="buttonContainer">
-            <button id="submit" type="submit">Find</button>
+            <button id="submit" type="submit">
+              <span class="material-icons">search</span>
+            </button>
           </div>
         </form>
       </section>
